objects/tffa__WebFraudEventConfiguration__mdt.object
<CustomObject>
    <description>Will contain configuration for web fraud event logging</description>
    <fields>
        <fullName>tffa__Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether the event config is enabled</description>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__RateThresholdPeriod__c</fullName>
        <defaultValue>1</defaultValue>
        <description>It is the period of time after which rate threshold will be checked before sending notifications.</description>
        <inlineHelpText>It is the period of time after which rate threshold will be checked before sending notifications.</inlineHelpText>
        <label>Rate threshold period in minutes</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__RateThreshold__c</fullName>
        <description>It is the rate threshold of fraud events per minute after which system alerts will be raised.</description>
        <inlineHelpText>It is the rate threshold of fraud events per minute after which system alerts will be raised.</inlineHelpText>
        <label>Rate threshold per minute</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__RetentionPeriod__c</fullName>
        <defaultValue>1</defaultValue>
        <description>It is the period of time after which event logs will be purged from the system.</description>
        <inlineHelpText>Event logs older than this period will be purged from the system.</inlineHelpText>
        <label>Log retention period in days</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Web Fraud Event Configuration</label>
    <pluralLabel>WebFraudEventConfigurations</pluralLabel>
</CustomObject>